hero section gap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,10 @@ a.shopingcart {
     width: 100%;
 }
 
+.banner-3-text {
+    margin-top: -48px;
+}
+
 .banner-3-text p {
     color: #fff;
     font-size: 13px;
